--- a/phonebookBackend/package.json
+++ b/phonebookBackend/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . --fix"
+    "lint": "eslint . "
   },
   "author": "ksn-ark",
   "license": "MIT",
